# ParallelComputingBoids

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_test.yml
results/dumps/: all_implementations_benchmarks.csv  baseline_results.csv  demo_comparison.csv  scheduling_comparison.csv  weak_scaling_benchmarks.csv
results/validation_dumps/: dump_boids_par_aos_atomic.csv  dump_boids_par_soa_atomic.csv  dump_boids_par_soa_histo.csv
scripts/: analisi_dati.py  run_all_implementations_benchmarks.py  run_demo.py  run_gui.py  run_optimization_benchmakrs.py  run_schedule_benchmarks.py  run_validation_all.py  run_weak_scaling_benchmarks.py
src/: boids_core.c  boids_manager.c  boids_simulation.c  main.c
